[package]
name = "zcm"
version = "0.1.0"
description = "zcm = Zenn Contents Manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
comrak = "0.16"
glob = "0.3.1"
regex = "1.0"
serde = "1.0"
serde_yaml = "0.9"
